server test with 2 clients