@@ -1,21 +1,27 @@
 package net.yura.shithead.server;
 
-import com.sun.tools.javac.util.List;
-
 import net.yura.lobby.server.AbstractTurnBasedServerGame;
 import net.yura.lobby.server.LobbySession;
+import net.yura.shithead.common.CommandParser;
 import net.yura.shithead.common.ShitheadGame;
 import net.yura.shithead.common.json.SerializerUtil;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
+import java.util.Collections;
 
 public class ShitHeadServer extends AbstractTurnBasedServerGame {
 
     ShitheadGame game;
+    private final CommandParser commandParser;
+
+    public ShitHeadServer() {
+        this.commandParser = new CommandParser();
+    }
 
     @Override
     public void startGame(String[] players) {
         game = new ShitheadGame(Arrays.asList(players));
+        game.deal();
     }
 
     @Override
@@ -23,7 +29,7 @@ public class ShitHeadServer extends AbstractTurnBasedServerGame {
         String username = lobbySession.getUsername();
         String json = SerializerUtil.toJSON(game, username);
         // TODO maybe we want to gzip
-        listoner.messageFromGame(json, List.of(lobbySession));
+        listoner.messageFromGame(json, Collections.singletonList(lobbySession));
     }
 
     @Override
@@ -56,7 +62,13 @@ public class ShitHeadServer extends AbstractTurnBasedServerGame {
         if (!username.equals(game.getCurrentPlayer().getName())) {
             throw new RuntimeException("not your turn");
         }
-        // TODO pass command to game engine
+        commandParser.execute(game, (String) o);
+
+        // after move, notify all players
+        for (LobbySession session : listSessions()) {
+            String json = SerializerUtil.toJSON(game, session.getUsername());
+            listoner.messageFromGame(json, Collections.singletonList(session));
+        }
     }
 
     @Override
